Added code for the displaying date and news in list

--- a/WebContent/andhrapradesh.html
+++ b/WebContent/andhrapradesh.html
@@ -38,179 +38,17 @@
 					<div class="single_post_content">
 						<div class="single_post_content_right">
 							<ul class="spost_nav">
-								<li class="contentcard">
+								<li ng-repeat="item in newsItems" class="contentcard">
 									<div class="media wow fadeInDown">
 										<a href="newsdescription.html" class="media-left"> <img
 											alt="" src="images/post_img1.jpg">
 										</a>
 										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" " class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
+
+											<a ng-click="getNewsDescription({{item.itemId}})" href="newsdescription.html" class="catg_title">
+												{{item.heading}} </a> <br>
+											<p style="font-size: 10px;">{{item.createdDate}}</p>
+											<p style="font-size: 13px; maxlength: 40">{{item.news}}</p>
 										</div>
 									</div>
 								</li>
@@ -259,4 +97,4 @@
 			</div>
 		</div>
 	</section>
-</div>SS
+</div>
