--- a/WebContent/sports.html
+++ b/WebContent/sports.html
@@ -38,182 +38,18 @@
 					<div class="single_post_content">
 						<div class="single_post_content_right">
 							<ul class="spost_nav">
-								<li class="contentcard">
+								<li ng-repeat="item in newsItems" class="contentcard">
 									<div class="media wow fadeInDown">
 										<a href="newsdescription.html" class="media-left"> <img
 											alt="" src="images/post_img1.jpg">
 										</a>
 										<div class="media-body">
 											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
+												{{item.heading}} </a>
 										</div>
 									</div>
 								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" " class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
+								
 							</ul>
 						</div>
 					</div>
