--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,6 +27,9 @@
 	src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
 <script src="assets/js/app/app.js"></script>
 <script src="js/app.js"></script>
+<script src="js/description.js"></script>
+<script src="js/newslist.js"></script>
+
 
 </head>
 
